--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div id="hero">
-        <h1>Ahla wa Sahlan (أهلا وسهلا) to Egypt! Get ready for an amazing adventure.</h1>
-        <h3>Welcome to the land of pyramids, pharaohs, and the mighty Nile!</h3>
+        <h1 class="hero-tit">Ahla wa Sahlan (أهلا وسهلا) to Egypt! Get ready for an amazing adventure.</h1>
+        <h3 class="hero-titd">Welcome to the land of pyramids, pharaohs, and the mighty Nile!</h3>
     </div>
         <h1 class="titles">About Egypt</h1>
         <p id="descriptions">Located in the northeast corner of Africa, Egypt is a country steeped in history and mystery. With a population of over 100 million people, it is the most populous country in the Arab world. Egypt is famed for its ancient civilization, with a history that spans over 5,000 years. Visitors can marvel at the architectural feats of the Pharaohs, explore the treasures of the Nile River, and immerse themselves in the vibrant culture and traditions that continue to thrive today.<br></p>
@@ -55,7 +55,45 @@
         </div>
        
         <div id="container">
-            <div id="card-p">
+            <!-- <div id="card-p">
+                <div id="dt-guide">
+                    <div class="card">
+                        <img class="avatar" src="images/images (5).jpg">
+                        <div>
+                            <h1>Nadia El-Sayed</h1>
+                            <h3>Cultural Heritage Expert and Tour Guide</h3>
+                            <p>Join me, Nadia El-Sayed, on a journey through Egypt's wonders. With years of experience, I'll guide you through ancient pyramids, vibrant bazaars, and more. Let's explore Egypt's rich history and culture together!</p>
+                        </div>
+                    </div>
+                    <div class="dt">
+                        <h2>Skills:</h2>
+                        <ul>
+                            <li>Expert knowledge of Egyptian history and culture</li>
+                            <li>Personalized tour planning and execution</li>
+                            <li>Excellent communication and storytelling</li>
+                            <li>Customer service and guest relations</li>
+                            <li>Multilingual proficiency</li>
+                        </ul>
+                    </div>
+                    <div class="dt">    
+                        <h2>Education History:</h2>
+                        <ul>
+                            <li>Bachelor's Degree in Egyptology, Cairo University</li>
+                            <li>Certification in Tour Guiding, The American University in Cairo</li>
+                        </ul>
+                    </div> 
+                    <div class="dt">    
+                        <h2>Languages:</h2>
+                        <ul>
+                            <li>Arabic (Native)</li>
+                            <li>English (Fluent)</li>
+                            <li>French (Proficient)</li>
+                            <li>Spanish (Conversational)</li>
+                        </ul>
+                    </div>   
+                </div>
+            </div> -->
+            <div id="dt-form">
                 <div class="card">
                     <img class="avatar" src="images/images (5).jpg">
                     <div>
@@ -64,10 +102,48 @@
                         <p>Join me, Nadia El-Sayed, on a journey through Egypt's wonders. With years of experience, I'll guide you through ancient pyramids, vibrant bazaars, and more. Let's explore Egypt's rich history and culture together!</p>
                     </div>
                 </div>
+
+                <div id="dt-guide">    
+                    <div class="dt">
+                        <h2>Skills:</h2>
+                        <ul>
+                            <li>Expert knowledge of Egyptian history and culture</li>
+                            <li>Personalized tour planning and execution</li>
+                            <li>Excellent communication and storytelling</li>
+                            <li>Customer service and guest relations</li>
+                            <li>Multilingual proficiency</li>
+                        </ul>
+                    </div>
+                    <div class="dt">    
+                        <h2>Education History:</h2>
+                        <ul>
+                            <li>Bachelor's Degree in Egyptology, Cairo University</li>
+                            <li>Certification in Tour Guiding, The American University in Cairo</li>
+                        </ul>
+                    </div> 
+                    <div class="dt">    
+                        <h2>Languages:</h2>
+                        <ul>
+                            <li>Arabic (Native)</li>
+                            <li>English (Fluent)</li>
+                            <li>French (Proficient)</li>
+                            <li>Spanish (Conversational)</li>
+                        </ul>
+                    </div>   
+                </div>
             </div>
         
             <div id="dt-form">
-                <div id="dt-guide">
+                <div class="card">
+                    <img class="avatar" src="images/images (5).jpg">
+                    <div>
+                        <h1>Nadia El-Sayed</h1>
+                        <h3>Cultural Heritage Expert and Tour Guide</h3>
+                        <p>Join me, Nadia El-Sayed, on a journey through Egypt's wonders. With years of experience, I'll guide you through ancient pyramids, vibrant bazaars, and more. Let's explore Egypt's rich history and culture together!</p>
+                    </div>
+                </div>
+
+                <div id="dt-guide">    
                     <div class="dt">
                         <h2>Skills:</h2>
                         <ul>
